--- a/wwwroot/_themes/main/partials/property/openhouse.html
+++ b/wwwroot/_themes/main/partials/property/openhouse.html
@@ -8,7 +8,7 @@
 		{{ if first }} 
 			{{ if date|is_today || date|in_future }}
 			<div class="time-slot">
-				<span class="red red-span" id="first-o-h">Open <i class="fa fa-home"></i>: </span> <span class="red red-span">{{date format="l, F jS" }}: {{ startTime }} - {{ endTime }} {{ if apptOnly }} | By Appointment Only{{ endif }}</span>
+				<span class="red red-span" id="first-o-h">Open <i class="fa fa-home"></i>: </span> <span class="red red-span">{{date format="l, F jS" }}: {{ startTime }} - {{ endTime }} {{ if apptOnly }} | By Appointment Only{{ endif </span>
 			</div>
 			{{ else }}
 			{{ endif }}
@@ -20,7 +20,7 @@
 				<div class="o-h-span display" id="second">
 					<span class="red red-span">Open <i class="fa fa-home"></i>: </span>
 				</div>
-				<span class="red red-span"> {{date format="l, F jS" }}: {{ startTime }} - {{ endTime }} {{ if apptOnly }} | By Appointment Only{{ endif }}</span>
+				<span class="red red-span"> {{date format="l, F jS" }}: {{ startTime }} - {{ endTime }} {{ if apptOnly }} | By Appointment Only{{ endif </span>
 			</div>
 			{{ else }}
 			{{ endif }}
