--- a/wwwroot/_themes/main/templates/contact.html
+++ b/wwwroot/_themes/main/templates/contact.html
@@ -29,14 +29,90 @@
            </div>
 
            <div class="form-half">
-<!--         <div class="recaptcha-container">
-          <div class="g-recaptcha" data-sitekey="6LeI7x0TAAAAACJ6rKoA2ypk2qvZGz1DLZxoCAI1"></div>
-        </div> -->
                <input type="submit" value="SEND" name="subscribe" class="btn-garfield">
            </div>
 
            {{ /raven:form }}
        </div>
    </div>
+<!-- Begin MailChimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+  #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+  /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+     We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<div id="mc_embed_signup">
+<form action="//lesliegarfield.us12.list-manage.com/subscribe/post?u=5645fb1229acab9604f9f450f&amp;id=8327ab2928" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+  <h2>Subscribe to our mailing list</h2>
+<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+<div class="mc-field-group">
+  <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+</label>
+  <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+</div>
+<div class="mc-field-group">
+  <label for="mce-FNAME">First Name </label>
+  <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+</div>
+<div class="mc-field-group">
+  <label for="mce-LNAME">Last Name </label>
+  <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+</div>
+<div class="mc-field-group">
+  <label for="mce-MMERGE3">Recipient </label>
+  <input type="text" value="" name="MMERGE3" class="" id="mce-MMERGE3">
+</div>
+<div class="mc-field-group input-group">
+    <strong>Brooklyn </strong>
+    <ul><li><input type="checkbox" value="1" name="group[1621][1]" id="mce-group[1621]-1621-0"><label for="mce-group[1621]-1621-0">Brooklyn</label></li>
+<li><input type="checkbox" value="2" name="group[1621][2]" id="mce-group[1621]-1621-1"><label for="mce-group[1621]-1621-1">Brooklyn Hts.</label></li>
+<li><input type="checkbox" value="4" name="group[1621][4]" id="mce-group[1621]-1621-2"><label for="mce-group[1621]-1621-2">Park Slope</label></li>
+</ul>
+</div>
+<div class="mc-field-group input-group">
+    <strong>East 70's </strong>
+    <ul><li><input type="checkbox" value="8" name="group[8261][8]" id="mce-group[8261]-8261-0"><label for="mce-group[8261]-8261-0">East 70's</label></li>
+</ul>
+</div>
+<div class="mc-field-group input-group">
+    <strong>East 90's </strong>
+    <ul><li><input type="checkbox" value="16" name="group[8265][16]" id="mce-group[8265]-8265-0"><label for="mce-group[8265]-8265-0">East 90's</label></li>
+</ul>
+</div>
+<div class="mc-field-group input-group">
+    <strong>Upper West Side </strong>
+    <ul><li><input type="checkbox" value="512" name="group[8277][512]" id="mce-group[8277]-8277-0"><label for="mce-group[8277]-8277-0">Owners</label></li>
+</ul>
+</div>
+<div class="mc-field-group input-group">
+    <strong>East Village/Chelsea/Greenwich Owners </strong>
+    <ul><li><input type="checkbox" value="32" name="group[8389][32]" id="mce-group[8389]-8389-0"><label for="mce-group[8389]-8389-0">East Village</label></li>
+<li><input type="checkbox" value="64" name="group[8389][64]" id="mce-group[8389]-8389-1"><label for="mce-group[8389]-8389-1">Chelsea</label></li>
+<li><input type="checkbox" value="128" name="group[8389][128]" id="mce-group[8389]-8389-2"><label for="mce-group[8389]-8389-2">Greenwich</label></li>
+</ul>
+</div>
+<div class="mc-field-group input-group">
+    <strong>Upper Manhattan </strong>
+    <ul><li><input type="checkbox" value="256" name="group[8461][256]" id="mce-group[8461]-8461-0"><label for="mce-group[8461]-8461-0">Upper Manhattan</label></li>
+</ul>
+</div>
+<div class="mc-field-group input-group">
+    <strong>East 60s </strong>
+    <ul><li><input type="checkbox" value="1024" name="group[8593][1024]" id="mce-group[8593]-8593-0"><label for="mce-group[8593]-8593-0">60s Owners</label></li>
+</ul>
+</div>
+  <div id="mce-responses" class="clear">
+    <div class="response" id="mce-error-response" style="display:none"></div>
+    <div class="response" id="mce-success-response" style="display:none"></div>
+  </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5645fb1229acab9604f9f450f_8327ab2928" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+
+<!--End mc_embed_signup-->
 </div>
 </section>
