email signup form

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -59,3 +59,4 @@
 @import 'modules/_social.scss';
 @import 'modules/_no_hero.scss';
 @import 'modules/_sitemap.scss';
+@import 'modules/_email_popup.scss';
