--- a/src/scss/modules/_email_popup.scss
+++ b/src/scss/modules/_email_popup.scss
@@ -9,7 +9,6 @@
 	border-top-left-radius: 4px;
 	border-top-right-radius: 4px;
 
-
 	i {
 		position: absolute;
 		right: 16px;
@@ -46,7 +45,7 @@
 		}
 		.fa-minus {
 			display: block;
-			margin-top: 10px;
+			margin-top: 8px;
 		}
 		.popup-body {
 			display: block;
@@ -60,6 +59,8 @@
 		margin-bottom: 10px;
 		background-color: #fff;
 		overflow: scroll;
+		border-left: 1px solid $modal-text;
+		border-right: 1px solid $modal-text;
 		input {
 			padding: 8px;
 			border-radius: 4px;
