--- a/wwwroot/_themes/main/layouts/default.html
+++ b/wwwroot/_themes/main/layouts/default.html
@@ -29,10 +29,11 @@
   <meta property="og:region" content="NY" />
   <meta property="og:postal-code" content="10022" />
   <meta property="og:country-name" content="USA" />
+  {{ if main_image or preview_image }}
+  <meta property="og:image" content="{{ main_image || preview_image }}" />
+  {{ endif }}
 
-  <!-- build:css -->
-  <link rel="stylesheet" href="{{ theme:css }}" />
-  <!-- endbuild -->
+  <link rel="stylesheet" href="{{ theme:css src="main.min.css" }}" />
   <link rel="shortcut icon" type="image/ico" href="{{ theme:img src="" }}">
 
   <link rel="apple-touch-icon" sizes="57x57" href="{{ theme:img src="/apple-touch-icon-57x57.png" }}">
@@ -96,8 +97,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     {{ theme:partial src="footer" }}
     {{ theme:partial src="email_popup" }}
-  <!-- build:js -->
-  <script src="{{ theme:js }}"></script>
-  <!-- endbuild -->
+  <script src="{{ theme:js src="main.min.js" }}"></script>
 </body>
 </html>
