--- a/wwwroot/_themes/main/partials/footer.html
+++ b/wwwroot/_themes/main/partials/footer.html
@@ -20,7 +20,21 @@
 				<div>{{ globals:phone }}</div>
 				<a href="mailto:{{ globals:email_info }}">{{ globals:email_info }}</a>
 		</div>
-
+		<div class="footer-group signup">
+			<div>Sign up for email updates</div>
+			<form action="//lesliegarfield.us12.list-manage.com/subscribe/post?u=5645fb1229acab9604f9f450f&amp;id=8327ab2928" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate email-signup" target="_blank" rel="noopener noreferrer" novalidate>
+			<div class="form-full">
+				<input type="email" value="" placeholder="Email" name="EMAIL" class="input required email" id="mce-EMAIL">
+				<input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="validate submit" target="_blank" rel="noopener noreferrer" novalidate>
+		    <div style="position: absolute; left: -5000px;"><input type="text" name="b_5645fb1229acab9604f9f450f_8327ab2928" tabindex="-1" value=""></div>
+		   </div>
+				<div id="mce-responses" class="clear">
+					<div class="response" id="mce-error-response" style="display:none"></div>
+					<div class="response" id="mce-success-response" style="display:none"></div>
+				</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+			</form>
+			<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+		</div>
 
 		<div class="footer-group affiliate">
 			<div>Exclusive Affiliate of</div>
@@ -48,5 +62,4 @@
 		</div>
 	</div>
 </footer>
-
 
