--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -44,9 +44,9 @@ footer {
 			@include span(4 of 12 no-gutter clear);
 		}
 		// Get rid of for new footer
-		@include breakpoint($large) {
-			@include span(3 of 12 no-gutter clear);
-		}
+		// @include breakpoint($large) {
+		// 	@include span(3 of 12 no-gutter clear);
+		// }
 	}
 	.affiliate {
 		margin-top: 20px;
