--- a/src/scss/_utils.scss
+++ b/src/scss/_utils.scss
@@ -87,6 +87,7 @@ $modal-text: #CCCCCC;
 $bg-light-blue: #E6F1FA;
 $quote-gray: #7a7a7a;
 $footer-gray: #999999;
+$email-footer-gray: #BCBFC1;
 
 // base sizes
 $bPadding: 60px;
