--- a/src/scss/modules/_email_popup.scss
+++ b/src/scss/modules/_email_popup.scss
@@ -1,106 +1,52 @@
 #email-popup {
 	position: fixed;
 	width: 280px;
-	// height: 46px;
+	height: 220px;
 	z-index: 100;
-	bottom: 0;
-	right: 40px;
+	bottom: 18px;
+	right: 18px;
 	background-color: $green;
-	border-top-left-radius: 4px;
-	border-top-right-radius: 4px;
+    border: 1px solid rgba(white,.7);
+    box-shadow: 0 0 0 8px $green;
+    
 
-	i {
-		position: absolute;
-		right: 16px;
-		top: 8px;
-		color: white;
-		padding-top: 0;
-	}
-	.popup-header {
-		padding-top: 8px;
-		padding-bottom: 8px;
-		border-top-left-radius: 4px;
-		border-top-right-radius: 4px;
-		span {
-			margin-left: 12px;
-			padding-top: 14px;
-			font-size: 14px;
-			color: white;
-		}
-		&:hover, &:focus {
-			cursor: pointer;
-			background-color: darken($green,2%);
-		}
-	}
-	.fa-envelope {
-		display: block;
-	}
-	.fa-minus {
-		display: none;
-	}
-	&.expanded {
-		height: 350px;
-		.fa-envelope {
-			display: none;
-		}
-		.fa-minus {
-			display: block;
-			margin-top: 8px;
-		}
-		.popup-body {
-			display: block;
-		}
-	}
 	.popup-body {
-		display: none;
+
 		height: 100%;
-		padding: 12px;
-		padding-bottom: 42px;
-		margin-bottom: 10px;
-		background-color: #fff;
-		overflow: scroll;
-		border-left: 1px solid $modal-text;
-		border-right: 1px solid $modal-text;
-		input {
-			padding: 8px;
-			border-radius: 4px;
-			width: 100%;
-			outline: none;
-			border: none;
-			border: 1px solid $modal-text;
-		}
-		.btn-contact {
-			margin: 0;
-			background-color: $green;
+		width: 100%;
+		 display: flex;
+		 flex-flow: column nowrap;
+		 justify-content: space-around;
+		 align-content: center;
+		 align-items: center;
+		padding: 15px;
+   .close-button {
+   	background-image: url('../img/close.png');
+   	height: 15px;
+   	width: 15px;
+   	background-repeat: no-repeat;
+   	position: absolute;
+   	right: 7px;
+   	top: 7px;
+   	&:hover, &:focus {
+   		cursor: pointer;
+   	}
+   }
+		* {
 			color: white;
-			padding-top: 10px;
-			padding-bottom: 10px;
+			text-align: center;
+			margin: 0;
 		}
-		.radio-fields {
-			overflow: scroll;
-			height: 190px;
-			margin-top: 12px;
-			margin-bottom: 12px;
-			padding: 6px;
-			padding-right: 12px;
-			border-radius: 4px;
-			border: 1px solid $modal-text;
-			ul {
-				li {
-					display: block;
-					padding: 4px;
-					input {
-						width: auto;
-					}
-					input[type='checkbox'] {
-							float: right;
-					}
-					label {
-						color: darken($modal-text,10%);
-						font-weight: 500;
-					}
-				}
-			}
+		h5 {
+			font-family: $hFontMI;
+		}
+		p {
+			font-size: 13px;
+			line-height: 20px;
+		}
+		a {
+			padding: 10px 40px;
+			border: 1px solid white;
 		}
 	}
 }
