--- a/wwwroot/_themes/main/layouts/default.html
+++ b/wwwroot/_themes/main/layouts/default.html
@@ -33,7 +33,9 @@
   <meta property="og:image" content="{{ main_image || preview_image }}" />
   {{ endif }}
 
-  <link rel="stylesheet" href="{{ theme:css src="main.min.css" }}" />
+  <!-- build:css -->
+  <link rel="stylesheet" href="{{ theme:css }}" />
+  <!-- endbuild -->
   <link rel="shortcut icon" type="image/ico" href="{{ theme:img src="" }}">
 
   <link rel="apple-touch-icon" sizes="57x57" href="{{ theme:img src="/apple-touch-icon-57x57.png" }}">
@@ -90,13 +92,20 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 {{ elseif segment_2 == "viewproperty" }}
 {{ redirect url="{{ homepage }}properties/new-york" }}
 {{ endif }}
-    <div class="page-wrap">
+
+    <div class="page-wrap {{ if segment_1 === "email" }}light-gray-bg{{ endif }}">
       {{ theme:partial src="nav" }}
       {{ layout_content }}
     </div>
-
+    {{ if segment_1 !== "email" }}
+      {{ theme:partial src="email_footer" }}
+    {{ endif }}
     {{ theme:partial src="footer" }}
+    {{ if !segment_1 }}
     {{ theme:partial src="email_popup" }}
-  <script src="{{ theme:js src="main.min.js" }}"></script>
+    {{ endif }}
+  <!-- build:js -->
+  <script src="{{ theme:js }}"></script>
+  <!-- endbuild -->
 </body>
 </html>
