--- a/wwwroot/_themes/main/partials/email_popup.html
+++ b/wwwroot/_themes/main/partials/email_popup.html
@@ -1,107 +1,8 @@
 <div id="email-popup">
-	<div class="popup-header">
-		<span>Join our mailing list</span>
-		<i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
-		<i class="fa fa-minus" aria-hidden="true"></i>
-	</div>
 	<div class="popup-body">
-		<div class="forms">
-			<style type="text/css">
-			  #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-			  /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-			     We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-			</style>
-			<div id="mc_embed_signup">
-			<form action="//lesliegarfield.us12.list-manage.com/subscribe/post?u=5645fb1229acab9604f9f450f&amp;id=8327ab2928" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>	
-			    <div id="mc_embed_signup_scroll">
-			<div class="mc-field-group">
-			  <input type="email" value="" name="EMAIL" placeholder="Email" class="required email" id="mce-EMAIL">
-			</div>
-
-			<div class="radio-fields">
-				<div class="mc-field-group input-group">
-				  	<ul>
-					    <li>
-						    <label for="mce-group[1621]-1621-0">Brooklyn</label>
-						    <input type="checkbox" value="1" name="group[1621][1]" id="mce-group[1621]-1621-0">
-					    </li>
-						<li>
-							<label for="mce-group[1621]-1621-1">Brooklyn Hts.</label>
-							<input type="checkbox" value="2" name="group[1621][2]" id="mce-group[1621]-1621-1">
-						</li>
-						<li>
-							<label for="mce-group[1621]-1621-2">Park Slope</label>
-							<input type="checkbox" value="4" name="group[1621][4]" id="mce-group[1621]-1621-2">
-						</li>
-					</ul>
-				</div>
-				<div class="mc-field-group input-group">
-				    <ul>
-				    	<li>
-					    	<label for="mce-group[8261]-8261-0">East 70's</label>
-					    	<input type="checkbox" value="8" name="group[8261][8]" id="mce-group[8261]-8261-0">
-				    	</li>
-					</ul>
-				</div>
-				<div class="mc-field-group input-group">
-				    <ul>
-					    <li>
-						    <label for="mce-group[8265]-8265-0">East 90's</label>
-						    <input type="checkbox" value="16" name="group[8265][16]" id="mce-group[8265]-8265-0">
-					    </li>
-					</ul>
-				</div>
-				<div class="mc-field-group input-group">
-				    <ul>
-				    	<li>
-				    		<label for="mce-group[8277]-8277-0">Upper West Side</label>
-				    		<input type="checkbox" value="512" name="group[8277][512]" id="mce-group[8277]-8277-0">
-				    	</li>
-					</ul>
-				</div>
-				<div class="mc-field-group input-group">
-					<ul>
-						<li>
-							<label for="mce-group[8389]-8389-0">East Village</label>
-							<input type="checkbox" value="32" name="group[8389][32]" id="mce-group[8389]-8389-0">
-						</li>
-						<li>
-							<label for="mce-group[8389]-8389-1">Chelsea</label>
-							<input type="checkbox" value="64" name="group[8389][64]" id="mce-group[8389]-8389-1">
-						</li>
-						<li>
-							<label for="mce-group[8389]-8389-2">Greenwich</label>
-							<input type="checkbox" value="128" name="group[8389][128]" id="mce-group[8389]-8389-2">
-						</li>
-					</ul>
-				</div>
-				<div class="mc-field-group input-group">
-				    <ul>
-					    <li>
-						    <label for="mce-group[8461]-8461-0">Upper Manhattan</label>
-						    <input type="checkbox" value="256" name="group[8461][256]" id="mce-group[8461]-8461-0">
-					    </li>
-					</ul>
-				</div>
-				<div class="mc-field-group input-group">
-				    <ul>
-					    <li>
-						    <label for="mce-group[8593]-8593-0">East 60s</label>
-						    <input type="checkbox" value="1024" name="group[8593][1024]" id="mce-group[8593]-8593-0">
-					    </li>
-					</ul>
-				</div>
-			</div>
-
-			  <div id="mce-responses" class="clear">
-			    <div class="response" id="mce-error-response" style="display:none"></div>
-			    <div class="response" id="mce-success-response" style="display:none"></div>
-			  </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-			    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5645fb1229acab9604f9f450f_8327ab2928" tabindex="-1" value=""></div>
-			    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn-contact"></div>
-			    </div>
-			</form>
-			</div>
-		</div>
+		<div class="close-button"></div>
+		<h5>Sign Up</h5>	
+		<p>Subscribe to receive regular townhouse and small building news straight to your inbox</p>
+		<a href="{{ _site_root }}email">Subscribe</a>
 	</div>
 </div>
