--- a/wwwroot/_themes/main/templates/landing.html
+++ b/wwwroot/_themes/main/templates/landing.html
@@ -8,7 +8,7 @@
 		</div>
 		<div class="mask"></div>
 	</section>	
-
+<div id="email-trigger"></div>
 	<section class="landing-sub-nav">
 		<div class="container">
 				<a href="{{ url }}company" class="grid-3 centered circle-nav">
