email signup all neighborhoods

--- a/wwwroot/_themes/main/partials/footer.html
+++ b/wwwroot/_themes/main/partials/footer.html
@@ -1,8 +1,8 @@
 <footer class="dark_gray">
 	<div class="container">
 		<div class="footer-group">
-			<a href="{{ _site_url }}/faq">Frequently Asked Questions</a>
-			{{ nav from="/sitemap" }}<a href="{{ url }}">Sitemap</a>{{ /nav }}
+			<a href="{{ _site_root }}faq">Frequently Asked Questions</a>
+			<a href="{{ _site_root }}sitemap/html">Sitemap</a>
 			<div class="show-small">
 				<a href="{{ globals:map_url}}" target="_blank" rel="noopener noreferrer">
 					<div>{{ globals:address_line1 }}</div>
