--- a/wwwroot/_themes/main/templates/email.html
+++ b/wwwroot/_themes/main/templates/email.html
@@ -2,6 +2,7 @@
 <section class="leading email">
 	<div class="container">
 		<div class="contact email-form">
+
       <h3>Email Alerts</h3>
       <div class="input-clear">
         <form action="//lesliegarfield.us12.list-manage.com/subscribe/post?u=5645fb1229acab9604f9f450f&amp;id=8327ab2928" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
@@ -13,65 +14,77 @@
            <div class="form">
              <input placeholder="First Name*" type="text" value="" name="LNAME" class="" id="mce-LNAME">
            </div>
-
+          
            <div class="form-full">
              <input placeholder="Email Address*" type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
            </div>
-           <p>Neighborhood Interest</p>
+           
           <div class="options">
+
+            <div class="form-full">
+             <p>Choose Neighborhood Interst(s)</p>
+           </div>
+           </div>
+           <div class="options">
+  
+           <div class="form-third">
+            <label class="checkall"><input type="checkbox" id="checkAll"/><span>All Neighborhoods</span></label>
+           </div>
           
            <div class="form-third">
-             <input type="checkbox" value="1" name="group[1621][1]" id="mce-group[1621]-1621-0"><label for="mce-group[1621]-1621-0">Brooklyn</label>
+             <input class="select-options" type="checkbox" value="16384" name="group[8261][16384]" id="mce-group[8261]-8261-0"><label for="mce-group[8261]-8261-0">Upper East Side 60's</label>
            </div>
 
            <div class="form-third">
-             <input type="checkbox" value="2" name="group[1621][2]" id="mce-group[1621]-1621-1"><label for="mce-group[1621]-1621-1">Brooklyn Hts.</label>
+             <input class="select-options" type="checkbox" value="4" name="group[8261][4]" id="mce-group[8261]-8261-1"><label for="mce-group[8261]-8261-1">Upper East Side 70's</label>
            </div>
 
            <div class="form-third">
-             <input type="checkbox" value="4" name="group[1621][4]" id="mce-group[1621]-1621-2"><label for="mce-group[1621]-1621-2">Park Slope</label>
+             <input class="select-options" type="checkbox" value="1024" name="group[8261][1024]" id="mce-group[8261]-8261-2"><label for="mce-group[8261]-8261-2">Upper East Side 80's</label>
            </div>
 
            <div class="form-third">
-            <input type="checkbox" value="8" name="group[8261][8]" id="mce-group[8261]-8261-0"><label for="mce-group[8261]-8261-0">East 70's</label>
+            <input class="select-options" type="checkbox" value="2048" name="group[8261][2048]" id="mce-group[8261]-8261-3"><label for="mce-group[8261]-8261-3">Upper East Side 90's</label>
           </div>
 
           <div class="form-third">
-            <input type="checkbox" value="16" name="group[8265][16]" id="mce-group[8265]-8265-0"><label for="mce-group[8265]-8265-0">East 90's</label>
+            <input class="select-options" type="checkbox" value="64" name="group[8277][64]" id="mce-group[8277]-8277-0"><label for="mce-group[8277]-8277-0">Upper West Side</label>
           </div>
 
           <div class="form-third">
-            <input type="checkbox" value="256" name="group[8277][256]" id="mce-group[8277]-8277-0"><label for="mce-group[8277]-8277-0">Owners</label>
+            <input class="select-options" type="checkbox" value="8192" name="group[9577][8192]" id="mce-group[9577]-9577-0"><label for="mce-group[9577]-9577-0">Midtown East</label>
           </div>
 
           <div class="form-third">
-            <input type="checkbox" value="32" name="group[8389][32]" id="mce-group[8389]-8389-0"><label for="mce-group[8389]-8389-0">Chelsea</label>
+            <input class="select-options" type="checkbox" value="8" name="group[8389][8]" id="mce-group[8389]-8389-0"><label for="mce-group[8389]-8389-0">Chelsea</label>
           </div>
 
           <div class="form-third">
-            <input type="checkbox" value="64" name="group[8389][64]" id="mce-group[8389]-8389-1"><label for="mce-group[8389]-8389-1">Greenwich</label>
+            <input class="select-options" type="checkbox" value="16" name="group[8389][16]" id="mce-group[8389]-8389-1"><label for="mce-group[8389]-8389-1">Greenwich Village</label>
           </div>
 
           <div class="form-third">
-            <input type="checkbox" value="1024" name="group[8389][1024]" id="mce-group[8389]-8389-2"><label for="mce-group[8389]-8389-2">Gramercy</label>
+            <input class="select-options" type="checkbox" value="4096" name="group[9573][4096]" id="mce-group[9573]-9573-0"><label for="mce-group[9573]-9573-0">West Village</label>
           </div>
 
           <div class="form-third">
-            <input type="checkbox" value="128" name="group[8461][128]" id="mce-group[8461]-8461-0"><label for="mce-group[8461]-8461-0">Upper Manhattan</label>
+            <input class="select-options" type="checkbox" value="128" name="group[8389][128]" id="mce-group[8389]-8389-2"><label for="mce-group[8389]-8389-2">Gramercy</label>
           </div>
 
           <div class="form-third">
-            <input type="checkbox" value="512" name="group[8593][512]" id="mce-group[8593]-8593-0"><label for="mce-group[8593]-8593-0">60s Owners</label>
+            <input class="select-options" type="checkbox" value="512" name="group[8389][512]" id="mce-group[8389]-8389-3"><label for="mce-group[8389]-8389-3">East Village</label>
+          </div>
+
+          <div class="form-third">
+            <input class="select-options" type="checkbox" value="1" name="group[1621][1]" id="mce-group[1621]-1621-0"><label for="mce-group[1621]-1621-0">Brooklyn Heights</label>
+          </div>
+
+          <div class="form-third">
+            <input class="select-options" type="checkbox" value="2" name="group[1621][2]" id="mce-group[1621]-1621-1"><label for="mce-group[1621]-1621-1">Park Slope</label>
           </div>
 
           </div>
-            <p>Sign Up for Reports</p>
-          <div class="options">
-        
-          <div class="form-third">
-            <input type="checkbox" value="2048" name="group[9469][2048]" id="mce-group[9469]-9469-0"><label for="mce-group[9469]-9469-0">Reports</label>
-          </div>
-          </div>
+
 
            <div class="form-half">
           <div id="mce-responses" class="clear">
