--- a/src/scss/components/_property_individual.scss
+++ b/src/scss/components/_property_individual.scss
@@ -391,6 +391,11 @@
 		color: darken($modal-text,10%);
 
 	}
+	a {
+		color: $text-green;
+		text-decoration: underline;
+		font-family: $hFontM;
+	}
 	.legal {
 		margin: 45px 0;
 	}
