--- a/src/scss/modules/_forms.scss
+++ b/src/scss/modules/_forms.scss
@@ -129,82 +129,105 @@ input, select {
 		margin-bottom: 40px;
 	}
 /* Base for label styling */
-[type="checkbox"]:not(:checked),
-[type="checkbox"]:checked {
-  position: absolute;
-  left: -9999px;
-}
-[type="checkbox"]:not(:checked) + label,
-[type="checkbox"]:checked + label {
-  position: relative;
-  padding-left: 25px;
-  cursor: pointer;
-}
+// [type="checkbox"]:not(:checked),
+// [type="checkbox"]:checked {
+//   position: absolute;
+//   left: -9999px;
+// }
+// [type="checkbox"]:not(:checked) + label,
+// [type="checkbox"]:checked + label {
+//   position: relative;
+//   padding-left: 25px;
+//   cursor: pointer;
+// }
 
-/* checkbox aspect */
-[type="checkbox"]:not(:checked) + label:before,
-[type="checkbox"]:checked + label:before {
-  content: '';
-  position: absolute;
-  left:0; top: 2px;
-  width: 17px; height: 17px;
-  border: 1px solid #aaa;
-  background: #f8f8f8;
-  border-radius: 3px;
-  box-shadow: inset 0 1px 3px rgba(0,0,0,.3)
-}
-/* checked mark aspect */
-[type="checkbox"]:not(:checked) + label:after,
-[type="checkbox"]:checked + label:after {
-  content: '✔';
-  position: absolute;
-  top: 3px; left: 4px;
-  font-size: 18px;
-  line-height: 0.8;
-  color: $green;
-  transition: all .2s;
-}
-/* checked mark aspect changes */
-[type="checkbox"]:not(:checked) + label:after {
-  opacity: 0;
-  transform: scale(0);
-}
-[type="checkbox"]:checked + label:after {
-  opacity: 1;
-  transform: scale(1);
-}
-/* disabled checkbox */
-[type="checkbox"]:disabled:not(:checked) + label:before,
-[type="checkbox"]:disabled:checked + label:before {
-  box-shadow: none;
-  border-color: #bbb;
-  background-color: #ddd;
-}
-[type="checkbox"]:disabled:checked + label:after {
-  color: #999;
-}
-[type="checkbox"]:disabled + label {
-  color: #aaa;
-}
-/* accessibility */
-[type="checkbox"]:checked:focus + label:before,
-[type="checkbox"]:not(:checked):focus + label:before {
-  border: 1px dotted blue;
-}
+// /* checkbox aspect */
+// [type="checkbox"]:not(:checked) + label:before,
+// [type="checkbox"]:checked + label:before {
+//   content: '';
+//   position: absolute;
+//   left:0; top: 2px;
+//   width: 17px; height: 17px;
+//   border: 1px solid #aaa;
+//   background: #f8f8f8;
+//   border-radius: 3px;
+//   box-shadow: inset 0 1px 3px rgba(0,0,0,.3)
+// }
+// /* checked mark aspect */
+// [type="checkbox"]:not(:checked) + label:after,
+// [type="checkbox"]:checked + label:after {
+//   content: '✔';
+//   position: absolute;
+//   top: 3px; left: 4px;
+//   font-size: 18px;
+//   line-height: 0.8;
+//   color: $green;
+//   transition: all .2s;
+// }
+// /* checked mark aspect changes */
+// [type="checkbox"]:not(:checked) + label:after {
+//   opacity: 0;
+//   transform: scale(0);
+// }
+// [type="checkbox"]:checked + label:after {
+//   opacity: 1;
+//   transform: scale(1);
+// }
+// /* disabled checkbox */
+// [type="checkbox"]:disabled:not(:checked) + label:before,
+// [type="checkbox"]:disabled:checked + label:before {
+//   box-shadow: none;
+//   border-color: #bbb;
+//   background-color: #ddd;
+// }
+// [type="checkbox"]:disabled:checked + label:after {
+//   color: #999;
+// }
+// [type="checkbox"]:disabled + label {
+//   color: #aaa;
+// }
+// /* accessibility */
+// [type="checkbox"]:checked:focus + label:before,
+// [type="checkbox"]:not(:checked):focus + label:before {
+//   border: 1px dotted blue;
+// }
 
-/* hover style just for information */
-label:hover:before {
-  border: 1px solid #4778d9!important;
-}
+// /* hover style just for information */
+// label:hover:before {
+//   border: 1px solid #4778d9!important;
+// }
 label {
 	font-family: $hFontM;
+	margin-left: 5px;
+	font-size: 15px;
+	&.checkall {
+		margin-left: 0;
+		span {
+			font-size: 15px;
+			padding-left: 5px;
+			font-family: $hFontMI;	
+		}
+
+	}
+}
+
+#checkAll {
+	height: 14px;
+	width: 14px;
 }
 p, .form-third {
 	text-align: left;
 }
 .form-third {
-	@include gallery (4 of 12);
-	margin-bottom: 10px;
+	@include full;
+	@include breakpoint($small) {
+		@include gallery (6 of 12);
+	}
+	@include breakpoint($medium) {
+		@include gallery (3 of 12);
+	}
+	
+	margin-bottom: 13px;
 }
 p {
 	@include span(12 of 12);
@@ -212,7 +235,10 @@ p {
 }
 .options {
 	@include clearfix;
-	margin-bottom: 30px;
+	margin-bottom: 15px;
+	p {
+		text-align: center;
+	}
 }
 
 /* Useless styles, just for demo design */
