--- a/wwwroot/_themes/main/css/main.css
+++ b/wwwroot/_themes/main/css/main.css
@@ -6263,6 +6263,11 @@ footer .footer-divider {
   font-weight: 700;
   color: #b3b3b3; }
 
+.summary a {
+  color: #009B77;
+  text-decoration: underline;
+  font-family: "Copernicus-Medium"; }
+
 .summary .legal {
   margin: 45px 0; }
 
@@ -7665,12 +7670,6 @@ input.radio, select.radio {
 
 .email-form {
   /* Base for label styling */
-  /* checkbox aspect */
-  /* checked mark aspect */
-  /* checked mark aspect changes */
-  /* disabled checkbox */
-  /* accessibility */
-  /* hover style just for information */
   /* Useless styles, just for demo design */ }
 
 .email-form h3 {
@@ -7678,98 +7677,74 @@ input.radio, select.radio {
   text-align: center;
   margin-bottom: 40px; }
 
-.email-form [type="checkbox"]:not(:checked),
-.email-form [type="checkbox"]:checked {
-  position: absolute;
-  left: -9999px; }
-
-.email-form [type="checkbox"]:not(:checked) + label,
-.email-form [type="checkbox"]:checked + label {
-  position: relative;
-  padding-left: 25px;
-  cursor: pointer; }
-
-.email-form [type="checkbox"]:not(:checked) + label:before,
-.email-form [type="checkbox"]:checked + label:before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 2px;
-  width: 17px;
-  height: 17px;
-  border: 1px solid #aaa;
-  background: #f8f8f8;
-  border-radius: 3px;
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3); }
-
-.email-form [type="checkbox"]:not(:checked) + label:after,
-.email-form [type="checkbox"]:checked + label:after {
-  content: '✔';
-  position: absolute;
-  top: 3px;
-  left: 4px;
-  font-size: 18px;
-  line-height: 0.8;
-  color: #009880;
-  transition: all .2s; }
-
-.email-form [type="checkbox"]:not(:checked) + label:after {
-  opacity: 0;
-  -webkit-transform: scale(0);
-  transform: scale(0); }
-
-.email-form [type="checkbox"]:checked + label:after {
-  opacity: 1;
-  -webkit-transform: scale(1);
-  transform: scale(1); }
-
-.email-form [type="checkbox"]:disabled:not(:checked) + label:before,
-.email-form [type="checkbox"]:disabled:checked + label:before {
-  box-shadow: none;
-  border-color: #bbb;
-  background-color: #ddd; }
-
-.email-form [type="checkbox"]:disabled:checked + label:after {
-  color: #999; }
-
-.email-form [type="checkbox"]:disabled + label {
-  color: #aaa; }
-
-.email-form [type="checkbox"]:checked:focus + label:before,
-.email-form [type="checkbox"]:not(:checked):focus + label:before {
-  border: 1px dotted blue; }
-
-.email-form label:hover:before {
-  border: 1px solid #4778d9 !important; }
-
 .email-form label {
-  font-family: "Copernicus-Medium"; }
+  font-family: "Copernicus-Medium";
+  margin-left: 5px;
+  font-size: 15px; }
+
+.email-form label.checkall {
+  margin-left: 0; }
+
+.email-form label.checkall span {
+  font-size: 15px;
+  padding-left: 5px;
+  font-family: "Copernicus-MediumItalic"; }
+
+.email-form #checkAll {
+  height: 14px;
+  width: 14px; }
 
 .email-form p, .email-form .form-third {
   text-align: left; }
 
 .email-form .form-third {
+  clear: both;
   box-sizing: border-box;
-  width: 33.33333%;
+  width: 100%;
   float: left;
-  padding-left: 0.83333%;
-  padding-right: 0.83333%;
-  margin-bottom: 10px; }
+  padding-left: 1.25%;
+  padding-right: 1.25%;
+  margin-bottom: 13px; }
 
-.email-form .form-third:nth-child(3n + 1) {
-  margin-left: 0;
-  margin-right: -100%;
-  clear: both; }
+@media (min-width: 768px) {
+  .email-form .form-third {
+    box-sizing: border-box;
+    width: 50%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+  .email-form .form-third:nth-child(2n + 1) {
+    margin-left: 0;
+    margin-right: -100%;
+    clear: both; }
+  .email-form .form-third:nth-child(2n + 2) {
+    margin-left: 50%;
+    margin-right: -100%;
+    clear: none; } }
 
-.email-form .form-third:nth-child(3n + 2) {
-  margin-left: 33.33333%;
-  margin-right: -100%;
-  clear: none; }
-
-.email-form .form-third:nth-child(3n + 3) {
-  margin-left: 66.66667%;
-  margin-right: -100%;
-  clear: none; }
+@media (min-width: 992px) {
+  .email-form .form-third {
+    box-sizing: border-box;
+    width: 25%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%; }
+  .email-form .form-third:nth-child(4n + 1) {
+    margin-left: 0;
+    margin-right: -100%;
+    clear: both; }
+  .email-form .form-third:nth-child(4n + 2) {
+    margin-left: 25%;
+    margin-right: -100%;
+    clear: none; }
+  .email-form .form-third:nth-child(4n + 3) {
+    margin-left: 50%;
+    margin-right: -100%;
+    clear: none; }
+  .email-form .form-third:nth-child(4n + 4) {
+    margin-left: 75%;
+    margin-right: -100%;
+    clear: none; } }
 
 .email-form p {
   box-sizing: border-box;
@@ -7780,12 +7755,15 @@ input.radio, select.radio {
   font-family: "Copernicus-Bold"; }
 
 .email-form .options {
-  margin-bottom: 30px; }
+  margin-bottom: 15px; }
 
 .email-form .options:before, .email-form .options:after {
   content: "";
   display: table;
   clear: both; }
+
+.email-form .options p {
+  text-align: center; }
 
 .modal svg {
   max-height: 100px;
