--- a/wwwroot/_themes/main/templates/email.html
+++ b/wwwroot/_themes/main/templates/email.html
@@ -12,7 +12,7 @@
              <input placeholder="First Name*" type="text" value="" name="FNAME" class="" id="mce-FNAME">
            </div>
            <div class="form">
-             <input placeholder="First Name*" type="text" value="" name="LNAME" class="" id="mce-LNAME">
+             <input placeholder="Last Name*" type="text" value="" name="LNAME" class="" id="mce-LNAME">
            </div>
           
            <div class="form-full">
@@ -22,7 +22,7 @@
           <div class="options">
 
             <div class="form-full">
-             <p>Choose Neighborhood Interst(s)</p>
+             <p>Choose Neighborhood Interest(s)</p>
            </div>
            </div>
            <div class="options">
