--- a/wwwroot/_themes/main/partials/property/specs.html
+++ b/wwwroot/_themes/main/partials/property/specs.html
@@ -74,7 +74,7 @@
 		{{ endif }}
 
 		{{ if maintenance|not_empty }}
-		<li>Maintenance</li>
+		<li>Maintenance (monthly)</li>
 		{{ endif }}
 	</ul>
 	<ul>
