--- a/wwwroot/_themes/main/partials/modal_contact.html
+++ b/wwwroot/_themes/main/partials/modal_contact.html
@@ -10,7 +10,7 @@
         <h2>More Than Mere Numbers</h2>
         <h3>Get in touch to make a more informed decision about your property with a Garfield Valuation</h3>
         
-        {{ raven:form formset="General_Enquiries" }}
+        {{ raven:form formset="general_enquiries" }}
 
         <div class="input-clear">
           <div class="form">
